--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "ecom",
+  "name": "neeraj",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
+    "mkcert": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.16.0",
+    "react-script": "^2.0.5",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.68.0",
+    "vite": "^4.4.9",
+    "web-vitals": "^2.1.4",
+    "homepage": "https://officeneerajsaini.github.io/ecommerce"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts  start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +45,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@iconify/react": "^4.1.1",
+    "gh-pages": "^6.0.0",
+    "postcss-nesting": "^12.0.1"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "postcss.config.js",
+  "author": "",
+  "license": "ISC"
 }
