--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "neeraj",
   "version": "0.1.0",
+  "homepage": "https://officeneerajsaini.github.io/ecommerce",
   "private": true,
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
@@ -17,8 +18,7 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.68.0",
     "vite": "^4.4.9",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://officeneerajsaini.github.io/ecommerce"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts  start",
